--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,6 +18,8 @@ jobs:
             
           - name: configurando python
             uses: actions/setup-python@v4
+            with:
+              python-version:'3.12'
         
           - name: instalando dependências
             run: |
